--- a/src/components/Crop.css
+++ b/src/components/Crop.css
@@ -1,8 +1,8 @@
-/* @import url(https://fonts.googleapis.com/css?family=Roboto:300);
+@import url(https://fonts.googleapis.com/css?family=Roboto:300);
 
 body {
-  background: #76b852;
-  display: flex;
+  background: #3bb000;
+  /* display: flex; */
   min-height: 100vh;
   justify-content: center;
   align-items: center;
@@ -70,4 +70,4 @@ button {
 
 button:disabled {
   cursor: default;
-} */
+}
