--- a/src/components/Crop.css
+++ b/src/components/Crop.css
@@ -1,7 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:300);
 
 body {
-  background: #3bb000;
+  background: #151719;
   /* display: flex; */
   min-height: 100vh;
   justify-content: center;
