--- a/src/components/DiseasePortal.css
+++ b/src/components/DiseasePortal.css
@@ -4,7 +4,7 @@
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
   max-width: 200px;
-  overflow: hidden;
+  /* overflow: hidden; */
   text-overflow: ellipsis;
   height: 56px;
 }
