added lime and ui changes

--- a/src/components/Disease.css
+++ b/src/components/Disease.css
@@ -1,9 +1,25 @@
 #image_api {
   width: 25%;
+  object-fit: cover;
 }
 
 input[type="file"] {
   display: none;
+}
+
+.item {
+  width: 200px;
+  text-align: center;
+  /* display: block; */
+  background-color: transparent;
+  /* border: 1px solid transparent; */
+  /* margin-right: 10px; */
+  margin-bottom: 1px;
+  float: left;
+}
+
+#index-gallery {
+  width: 465px;
 }
 label {
   color: white;
